# finchat-mvp

./: Dockerfile  README.md  pyproject.toml
app/: main.py
app/ai/: llm.py
app/api/: chat.py
app/constants/: prompts.py
app/dataVendors/: baseDataVendor.py  dataVendorFactory.py  functionTool.py  functionToolSchema.py
app/dataVendors/financialDatasetsAI/: vendor.py
app/dataVendors/yfinance/: vendor.py
