[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "openai>=1.59.6",
    "pandas>=2.2.3",
    "pydantic>=2.10.4",
    "requests>=2.32.3",
    "yfinance>=0.2.54",
]
